# lib_expat

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: freebsd.yml
cmake/: ConfigureChecks.cmake  util.cmake
expat/: CMakeLists.txt
opt/: folders.csv
